poke/testsuite/poke.pkl/struct-method-diag-10.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defvar n = 10;
    int i;
    method foo = int:
      {
        return n + i; /* { dg-error "invalid.*variable" } */
      }
  };
